test/files/neg/beanInfoDeprecation.scala
@scala.beans.BeanInfo
class C
